--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,9 @@
     <title>Retro Snake | HTML Demo</title>
 </head>
 <body>
+  <div class="popup">
+    <iframe href="popup-card/"></iframe>
+  </div>
     <canvas id='canvas1' width='350' height='350'>
     </canvas>
 
