--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="popup">
-    <iframe href="popup-card/"></iframe>
+    <iframe href="/popup-card/"></iframe>
   </div>
     <canvas id='canvas1' width='350' height='350'>
     </canvas>
