--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="popup">
     <iframe href="/popup-card/"></iframe>
+    <buttom onclick="javascript:hidePopup();">Ok</buttom>
   </div>
     <canvas id='canvas1' width='350' height='350'>
     </canvas>
@@ -23,6 +24,6 @@
       <button id="fullscreenBtn" onclick="javascript:goFullScreen();">Go Fullscreen</button>
 
     <script src="game.js"></script>
-    <script src="fullscreen.js"></script>
+    <script src="js/fullscreen.js"></script>
 </body>
 </html>
