--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="popup">
-    <iframe href="/popup-card/"></iframe>
+    <iframe href="popup-card/" height="400" width="400"></iframe>
     <buttom onclick="javascript:hidePopup();">Ok</buttom>
   </div>
     <canvas id='canvas1' width='350' height='350'>
@@ -25,5 +25,6 @@
 
     <script src="game.js"></script>
     <script src="js/fullscreen.js"></script>
+    <script src="js/popup.js"></script>
 </body>
 </html>
