erwbjgbkogdbjnbdjndone31on23nfjkndsjgf

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="popup">
     <iframe href="popup-card/" height="400" width="400"></iframe>
-    <buttom onclick="javascript:hidePopup();">Ok</buttom>
+    <button onclick="javascript:hidePopup();">Ok</button>
   </div>
     <canvas id='canvas1' width='350' height='350'>
     </canvas>
