--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <iframe href="popup-card/" height="400" width="400"></iframe>
     <button onclick="javascript:hidePopup();">Ok</button>
   </div>
+  <div class="game">
     <canvas id='canvas1' width='350' height='350'>
     </canvas>
 
@@ -22,7 +23,7 @@
       </div>
 
       <button id="fullscreenBtn" onclick="javascript:goFullScreen();">Go Fullscreen</button>
-
+  </div>
     <script src="game.js"></script>
     <script src="js/fullscreen.js"></script>
     <script src="js/popup.js"></script>
